--- a/tests/collision-detection.tests/collision-detection.tests.vcxproj
+++ b/tests/collision-detection.tests/collision-detection.tests.vcxproj
@@ -61,21 +61,25 @@
     <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
     <Import Project="..\..\build-recipes\recipe.application.props" />
     <Import Project="..\..\build-recipes\recipe.bullet.props" />
+    <Import Project="..\..\build-recipes\recipe.mstest_utils.props" />
   </ImportGroup>
   <ImportGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'" Label="PropertySheets">
     <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
     <Import Project="..\..\build-recipes\recipe.application.props" />
     <Import Project="..\..\build-recipes\recipe.bullet.props" />
+    <Import Project="..\..\build-recipes\recipe.mstest_utils.props" />
   </ImportGroup>
   <ImportGroup Label="PropertySheets" Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
     <Import Project="..\..\build-recipes\recipe.application.props" />
     <Import Project="..\..\build-recipes\recipe.bullet.props" />
+    <Import Project="..\..\build-recipes\recipe.mstest_utils.props" />
   </ImportGroup>
   <ImportGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'" Label="PropertySheets">
     <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
     <Import Project="..\..\build-recipes\recipe.application.props" />
     <Import Project="..\..\build-recipes\recipe.bullet.props" />
+    <Import Project="..\..\build-recipes\recipe.mstest_utils.props" />
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
