Renamed files and projects to match the content.

--- a/cold-md.contract/cold-md.contract.vcxproj
+++ b/cold-md.contract/cold-md.contract.vcxproj
@@ -119,6 +119,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="cold-md.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
