--- a/tests/collision-detection.tests/collision-detection.tests.vcxproj
+++ b/tests/collision-detection.tests/collision-detection.tests.vcxproj
@@ -22,6 +22,7 @@
     <ProjectGuid>{89237FF1-697F-4D6D-92F4-AC8A50EC065B}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
     <RootNamespace>collisiondetectiontests</RootNamespace>
+    <ProjectName>cold-md.tests</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -174,7 +175,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
-    <ClCompile Include="collision_detection.cpp" />
+    <ClCompile Include="cold-md.bullet.exploration.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
