--- a/tests/collision-detection.tests/collision-detection.tests.vcxproj.filters
+++ b/tests/collision-detection.tests/collision-detection.tests.vcxproj.filters
@@ -26,7 +26,7 @@
     <ClCompile Include="stdafx.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="collision_detection.cpp">
+    <ClCompile Include="cold-md.bullet.exploration.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
