Renames, moves and additions continued...

--- a/cold-md.tests/cold-md.tests.vcxproj
+++ b/cold-md.tests/cold-md.tests.vcxproj
@@ -60,27 +60,27 @@
   </ImportGroup>
   <ImportGroup Label="PropertySheets" Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
-    <Import Project="..\..\build-recipes\recipe.application.props" />
-    <Import Project="..\..\build-recipes\recipe.bullet.props" />
-    <Import Project="..\..\build-recipes\recipe.mstest_utils.props" />
+    <Import Project="..\build-recipes\recipe.application.props" />
+    <Import Project="..\build-recipes\recipe.bullet.props" />
+    <Import Project="..\build-recipes\recipe.mstest_utils.props" />
   </ImportGroup>
   <ImportGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'" Label="PropertySheets">
     <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
-    <Import Project="..\..\build-recipes\recipe.application.props" />
-    <Import Project="..\..\build-recipes\recipe.bullet.props" />
-    <Import Project="..\..\build-recipes\recipe.mstest_utils.props" />
+    <Import Project="..\build-recipes\recipe.application.props" />
+    <Import Project="..\build-recipes\recipe.bullet.props" />
+    <Import Project="..\build-recipes\recipe.mstest_utils.props" />
   </ImportGroup>
   <ImportGroup Label="PropertySheets" Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
-    <Import Project="..\..\build-recipes\recipe.application.props" />
-    <Import Project="..\..\build-recipes\recipe.bullet.props" />
-    <Import Project="..\..\build-recipes\recipe.mstest_utils.props" />
+    <Import Project="..\build-recipes\recipe.application.props" />
+    <Import Project="..\build-recipes\recipe.bullet.props" />
+    <Import Project="..\build-recipes\recipe.mstest_utils.props" />
   </ImportGroup>
   <ImportGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'" Label="PropertySheets">
     <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
-    <Import Project="..\..\build-recipes\recipe.application.props" />
-    <Import Project="..\..\build-recipes\recipe.bullet.props" />
-    <Import Project="..\..\build-recipes\recipe.mstest_utils.props" />
+    <Import Project="..\build-recipes\recipe.application.props" />
+    <Import Project="..\build-recipes\recipe.bullet.props" />
+    <Import Project="..\build-recipes\recipe.mstest_utils.props" />
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
@@ -175,7 +175,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
-    <ClCompile Include="cold-md.bullet.exploration.cpp" />
+    <ClCompile Include="cold-md.bullet.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
