--- a/cold-md.tests/cold-md.tests.vcxproj.filters
+++ b/cold-md.tests/cold-md.tests.vcxproj.filters
@@ -26,7 +26,7 @@
     <ClCompile Include="stdafx.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="cold-md.bullet.exploration.cpp">
+    <ClCompile Include="cold-md.bullet.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
