Extend tests to investigate failure of bullet_world_reacts_on_broad_phase_callback

--- a/cold-md.contract/cold-md.contract.vcxproj.filters
+++ b/cold-md.contract/cold-md.contract.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="cold-md.h">
+    <ClInclude Include="..\cold-md\contract\cold-md.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
