--- a/cold-md.bullet/cold-md.bullet.vcxproj.filters
+++ b/cold-md.bullet/cold-md.bullet.vcxproj.filters
@@ -15,8 +15,13 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="world.h">
+    <ClInclude Include="..\cold-md\bullet\world.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="..\cold-md\bullet\world.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
