--- a/cold-md.tests/cold-md.tests.vcxproj
+++ b/cold-md.tests/cold-md.tests.vcxproj
@@ -169,13 +169,14 @@
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="cold-md.mindist.tests.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
-    <ClCompile Include="cold-md.bullet.cpp" />
+    <ClCompile Include="cold-md.bullet_exploration.tests.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\cold-md.bullet\cold-md.bullet.vcxproj">
