--- a/cold-md.contract/cold-md.contract.vcxproj.filters
+++ b/cold-md.contract/cold-md.contract.vcxproj.filters
@@ -19,4 +19,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="..\cold-md\contract\cold-md.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+  </ItemGroup>
 </Project>
