--- a/cold-md.bullet/cold-md.bullet.vcxproj
+++ b/cold-md.bullet/cold-md.bullet.vcxproj
@@ -56,21 +56,25 @@
     <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
     <Import Project="..\build-recipes\recipe.library.props" />
     <Import Project="..\build-recipes\recipe.bullet.props" />
+    <Import Project="..\build-recipes\recipe.boost.props" />
   </ImportGroup>
   <ImportGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'" Label="PropertySheets">
     <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
     <Import Project="..\build-recipes\recipe.library.props" />
     <Import Project="..\build-recipes\recipe.bullet.props" />
+    <Import Project="..\build-recipes\recipe.boost.props" />
   </ImportGroup>
   <ImportGroup Label="PropertySheets" Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
     <Import Project="..\build-recipes\recipe.library.props" />
     <Import Project="..\build-recipes\recipe.bullet.props" />
+    <Import Project="..\build-recipes\recipe.boost.props" />
   </ImportGroup>
   <ImportGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'" Label="PropertySheets">
     <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
     <Import Project="..\build-recipes\recipe.library.props" />
     <Import Project="..\build-recipes\recipe.bullet.props" />
+    <Import Project="..\build-recipes\recipe.boost.props" />
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup />
@@ -123,7 +127,10 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="..\cold-md\bullet\min_dist_bullet.h" />
     <ClInclude Include="..\cold-md\bullet\min_dist_calculator.h" />
+    <ClInclude Include="..\cold-md\bullet\min_dist_traits.h" />
+    <ClInclude Include="..\cold-md\bullet\min_dist_types.h" />
     <ClInclude Include="..\cold-md\bullet\world.h" />
   </ItemGroup>
   <ItemGroup>
