--- a/.gitignore
+++ b/.gitignore
@@ -188,3 +188,4 @@ GeneratedArtifacts/
 _Pvt_Extensions/
 ModelManifest.xml
 /targets/tmp/collision-detection.tests.x86.v120.Debug/collision-detection.tests/collisio.89237FF1.tlog/unsuccessfulbuild
+*.opendb
